--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <div id="qunit-fixture"></div>
 
 <script src="source/max.js"></script>
+<script src="source/roman.js"></script>
+
 
 <script src="tests/max.js"></script>
 <script src="tests/roman.js"></script>
